# type-safe-api

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: mod.rs
web/: package-lock.json  package.json
web/src/: App.tsx  index.tsx
web/src/utils/: bindings.ts
