[package]
name = "type-safe-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
publish = false


[dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.6.18"
rspc = { version = "0.1.3", features = ["axum"] }
dotenv = "0.15.0"
tower-http = {version = "0.4.0", features = ["cors"]}
serde = {  version = "*", features= ["derive"]}
serde_json = "*"
mongodb = "2.5.0"
futures = "0.3.5"

[package.metadata.pkg-config]
openssl = "0.0.3"
